--- a/arcfacedemo-first/src/main/resources/application-prod.properties
+++ b/arcfacedemo-first/src/main/resources/application-prod.properties
@@ -1,15 +1,15 @@
 # port
-server.port=8099
+server.port=8090
 spring.main.banner-mode=off
 
-server.servlet.multipart.singlefilemaxsize=1024kb
+server.servlet.multipart.singlefilemaxsize=512kb
 server.servlet.multipart.totalfilemaxsize=5120kb
 ########################################################  
 # redis
 ########################################################  
 spring.redis.database=0
 spring.redis.host=127.0.0.1
-spring.redis.password=QLY20160214qly
+spring.redis.password=hoperun626
 spring.redis.port=6379
 
 spring.redis.jedis.pool.max-active=8
