--- a/arcfacedemo-first/src/main/resources/application-dev.properties
+++ b/arcfacedemo-first/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ server.servlet.multipart.totalfilemaxsize=5120kb
 ########################################################  
 spring.redis.database=0
 spring.redis.host=127.0.0.1
-spring.redis.password=QLY20160214qly
+spring.redis.password=123456
 spring.redis.port=6379
 
 spring.redis.jedis.pool.max-active=8
